fix: set wrapper width when rendering withNewWrappingContext

--- a/framework/components/AMount/AMount.scss
+++ b/framework/components/AMount/AMount.scss
@@ -11,5 +11,9 @@
 .a-mount {
   &--withNewWrappingContext {
     position: relative;
+
+    & .a-mount--wrap {
+      width: fit-content;
+    }
   }
 }
